--- a/docs/vacc_documents/training_syllabus/s1.md
+++ b/docs/vacc_documents/training_syllabus/s1.md
@@ -31,13 +31,70 @@
 </tbody></table>
 
 ## Scope
-Welcome to the Arabian vACC ATC Training Policy. This document serves as a comprehensive guide for all aspiring and current controllers within the vACC. Whether you are just beginning your journey as a Student Controller or progressing toward Center positions, this policy will outline the expectations, procedures, and pathways that support your growth and success within the network.
+This syllabus outlines the structure and learning pathway for students pursuing the S1 rating within the Arabian vACC.
 
-Our training spans three key FIRs across the Middle East: Doha (OTDF), Muscat (OOMM), and the United Arab Emirates (OMAE). Through consistent standards, region-specific procedures, and a focus on real-world accuracy, we aim to deliver a high-quality experience that mirrors real ATC operations while being accessible to all levels of experience.
+Students will achieve the course objectives through a combination of independent study and guided practical training. Core learning materials are provided via the Moodle platform and the Arabian vACC Library.
 
-Our approach balances theory and practice, with a progression system designed to build your skills one rating at a time. This policy will guide you through that journey — from initial onboarding to rating advancement, endorsement acquisition, and beyond.
+In addition to self-study, students will receive one-on-one practical instruction from mentors and instructors. Active participation and engagement are encouraged throughout your training.
+
+Students are also encouraged to ask questions and seek support in the ATC Training category on the Arabian vACC Discord server.
 
 !!! warning
     All documentation in this section is intended solely for use on the VATSIM network and must not be used for real-world aviation operations. The authors disclaim any liability for personal injury or death resulting from misuse of this material.
 
-## TBD
+## Grading Criteria
+Controllers will be graded during each session with a mentor or instructor. These evaluations are designed using Competency-Based Training and Assessment (CBTA) principles to ensure that controllers are progressing in both skills and knowledge.
+
+### Performance Levels
+Controllers will be assessed according to their **competency** and **performance** in each session. The following performance levels exist:
+
+- **Below:** The controller's performance is below the expected standard for their current rating or endorsement.
+- **At:** The controller meets the expected standard for their rating or endorsement.
+- **Above:** The controller exceeds the expected standard for their rating or endorsement.
+
+Controllers should aim to be **"At"** the expected performance level as they progress through their training. If a controller is rated **"Below,"** additional sessions will be required to address and correct the issues identified during training.
+
+### Input Required from the Mentor or Instructor
+In addition to performance evaluation, controllers will be assessed based on the level of input required from the mentor or instructor during the session. This helps identify the controller's ability to operate independently and effectively. The following input levels are used:
+
+- **Constant:** The controller requires frequent reminders throughout the session, indicating a need for further development.
+- **Intermittent:** The controller needs occasional reminders, showing progress but still requiring guidance.
+- **Minor:** The controller requires very few reminders, indicating good progress and near independence.
+- **N/A:** The controller requires no reminders, demonstrating full autonomy in their role.
+
+Controllers should strive for **"N/A"** where no input is required from the mentor or instructor. If a controller is rated as **"Constant,"** additional sessions will be necessary to address gaps in their knowledge or performance.
+
+This grading system helps ensure that controllers receive the support and training they need to meet the required standards for their ratings and endorsements. Continuous feedback and targeted training sessions are crucial for controllers to advance to higher levels of proficiency.
+
+## Theoretical Moodle Course
+The following list outlines the theoretical topics covered in the S1 Rating course available on the Moodle platform.
+
+TBD
+
+## Learning Objectives
+### 
+
+
+## Session Plans
+
+### Training Aerodromes
+| Session Number | Doha-Hamad (OTHH) | Muscat (OOMS) | Sheikh Zayed (OMAA) | Sharjah (OMSJ) |
+|----------------|-------------------|---------------|---------------------|----------------|
+|                |                   |               |                     |                |
+|                |                   |               |                     |                |
+|                |                   |               |                     |                |
+|                |                   |               |                     |                |
+
+### Session 1
+| Session            | 1                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+|--------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| Type               | Simulator, Sweatbox                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+| Duration           | 1 - 1.5 Hours                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
+| Session Objectives | - Verify the controlling software and sector file are correct.<br>- Review the roles and responsibilities of the GMP, GMC, and AIR controllers.<br>- Choose an appropriate runway configuration.<br>- Walk through the aerodrome layout and the standard taxi routes.<br>- Practice the log-on procedure to the network.<br>- Generate a combined or split ATIS via vATIS.<br>- Introduce and explain the use of status blocks and scratch pads.<br>- Explain and practice issuing IFR clearances, focusing on mandatory readback requirements.<br>- Explain and practice issuing pushback and start-up instructions.<br>- Explain and practice applying the red-carpet rule.<br>- Explain and practice issuing taxi instructions.<br>- Define and practice the correct procedure for handing off control to another unit. |
+
+### Session 2
+
+### Session 3
+
+### Session 4
+
