--- a/docs/vacc_documents/training_syllabus/s1.md
+++ b/docs/vacc_documents/training_syllabus/s1.md
@@ -66,7 +66,7 @@ Controllers should strive for **"N/A"** where no input is required from the ment
 
 This grading system helps ensure that controllers receive the support and training they need to meet the required standards for their ratings and endorsements. Continuous feedback and targeted training sessions are crucial for controllers to advance to higher levels of proficiency.
 
-## Theoretical Moodle Course
+## Theoretical Course
 The following list outlines the theoretical topics covered in the S1 Rating course available on the Moodle platform.
 
 TBD
@@ -93,6 +93,11 @@ TBD
 | Session Objectives | - Verify the controlling software and sector file are correct.<br>- Review the roles and responsibilities of the GMP, GMC, and AIR controllers.<br>- Choose an appropriate runway configuration.<br>- Walk through the aerodrome layout and the standard taxi routes.<br>- Practice the log-on procedure to the network.<br>- Generate a combined or split ATIS via vATIS.<br>- Introduce and explain the use of status blocks and scratch pads.<br>- Explain and practice issuing IFR clearances, focusing on mandatory readback requirements.<br>- Explain and practice issuing pushback and start-up instructions.<br>- Explain and practice applying the red-carpet rule.<br>- Explain and practice issuing taxi instructions.<br>- Define and practice the correct procedure for handing off control to another unit. |
 
 ### Session 2
+| Session            | 2                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
+|--------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| Type               | Simulator, Sweatbox                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
+| Duration           | 1 - 1.5 Hours                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
+| Session Objectives | - Access the eAIP (if available) and review the various chart types, highlighting their features and usage.<br>- Introduce the basics of altimetry, including definitions of QNH and QFE, and explain where each is applied operationally.<br>- Discuss the roles and responsibilities of adjacent control positions such as AIR, FIN, APP, and ACC. Cover what each position handles, how they are represented in EuroScope, and provide examples of scenarios where coordination is necessary.<br>- Use the VFPC plugin to identify any lateral or vertical flight plan restrictions specific to the aerodrome.<br>- Learn to recognize common errors in flight plans, such as incorrect routings for SIDs, inappropriate requested flight levels (RFLs) for direction of flight, or RFLs that conflict with Letters of Agreement.<br>- Explain and practice stand allocation using GRPlugin, referencing the procedures in the local SOP.<br>- Explain and practice the use of conditional clearances.<br>- Introduce the structure and procedures for issuing VFR clearances for circuit traffic and CTR entry/exit.<br>- Review and consolidate the key objectives covered in previous sessions to reinforce understanding and application. |
 
 ### Session 3
 
