--- a/docs/vacc_documents/training_syllabus/s1.md
+++ b/docs/vacc_documents/training_syllabus/s1.md
@@ -100,11 +100,11 @@ TBD
 | Session Objectives | - Access the eAIP (if available) and review the various chart types, highlighting their features and usage.<br>- Introduce the basics of altimetry, including definitions of QNH and QFE, and explain where each is applied operationally.<br>- Discuss the roles and responsibilities of adjacent control positions such as AIR, FIN, APP, and ACC. Cover what each position handles, how they are represented in EuroScope, and provide examples of scenarios where coordination is necessary.<br>- Use the VFPC plugin to identify any lateral or vertical flight plan restrictions specific to the aerodrome.<br>- Learn to recognize common errors in flight plans, such as incorrect routings for SIDs, inappropriate requested flight levels (RFLs) for direction of flight, or RFLs that conflict with Letters of Agreement.<br>- Explain and practice stand allocation using GRPlugin, referencing the procedures in the local SOP.<br>- Explain and practice the use of conditional clearances.<br>- Introduce the structure and procedures for issuing VFR clearances for circuit traffic and CTR entry/exit.<br>- Review and consolidate the key objectives covered in previous sessions to reinforce understanding and application. |
 
 ### Session 3
-| Session            | 3                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
-|--------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Type               | Simulator, Sweatbox                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
-| Duration           | 1 - 1.5 Hours                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
-| Session Objectives | Introduce low visibility procedures, where applicable to the aerodrome, and explain the associated local procedures and considerations.<br>Introduce METARs and TAFs, and practice decoding simple examples to build confidence in interpreting weather reports.<br>Explain non-standard IFR clearances such as omnidirectional and radar-vectored departures, and provide opportunities to practice issuing them.<br>Introduce the EuroScope command line, covering the use of aliases, private messaging, and function key shortcuts to improve efficiency.<br>Consolidate key objectives from previous sessions to reinforce understanding and ensure continuity in training. |
+| Session            | 3                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+|--------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| Type               | Simulator, Sweatbox                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+| Duration           | 1 - 1.5 Hours                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
+| Session Objectives | - Introduce low visibility procedures, where applicable to the aerodrome, and explain the associated local procedures and considerations.<br>- Introduce METARs and TAFs, and practice decoding simple examples to build confidence in interpreting weather reports.<br>- Explain non-standard IFR clearances such as omnidirectional and radar-vectored departures, and provide opportunities to practice issuing them.<br>- Introduce the EuroScope command line, covering the use of aliases, private messaging, and function key shortcuts to improve efficiency.<br>- Consolidate key objectives from previous sessions to reinforce understanding and ensure continuity in training. |
 
 ### Session 4
 
