--- a/docs/vacc_documents/training_syllabus/s1.md
+++ b/docs/vacc_documents/training_syllabus/s1.md
@@ -107,4 +107,8 @@ TBD
 | Session Objectives | - Introduce low visibility procedures, where applicable to the aerodrome, and explain the associated local procedures and considerations.<br>- Introduce METARs and TAFs, and practice decoding simple examples to build confidence in interpreting weather reports.<br>- Explain non-standard IFR clearances such as omnidirectional and radar-vectored departures, and provide opportunities to practice issuing them.<br>- Introduce the EuroScope command line, covering the use of aliases, private messaging, and function key shortcuts to improve efficiency.<br>- Consolidate key objectives from previous sessions to reinforce understanding and ensure continuity in training. |
 
 ### Session 4
-
+| Session            | 4                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
+|--------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| Type               | Simulator, Sweatbox                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
+| Duration           | 1 - 1.5 Hours                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
+| Session Objectives | - Discuss the purpose of flow management techniques, including the use of CTOTs and MDIs, and provide an introduction to the A-CDM concept.<br>- Explain the operational benefits of implementing flow control measures, particularly in managing demand and maintaining efficiency.<br>- Introduce the application of flow management techniques in high-traffic situations to help maintain orderly and safe operations.<br>- Review the overall objectives of the course and consolidate the student’s knowledge in preparation for the final exam.<br>- In most cases, students should be recommended for their exam at this stage. If it is clear they are not yet ready, conduct one additional consolidation session to address any remaining gaps. |
