--- a/docs/vacc_documents/training_syllabus/s1.md
+++ b/docs/vacc_documents/training_syllabus/s1.md
@@ -69,11 +69,167 @@ This grading system helps ensure that controllers receive the support and traini
 ## Theoretical Course
 The following list outlines the theoretical topics covered in the S1 Rating course available on the Moodle platform.
 
-TBD
+(Draft in Progress)
 
 ## Learning Objectives
-### 
+### Aerodrome Movement Area
+- Identify and explain the functions of aprons, taxiways, and runways.
+- Apply knowledge of local taxiway and apron limitations (e.g., width, runway incursion risks) when issuing ground movement instructions.
 
+### Aeronautical Charts
+- Locate and recognize the following chart types:
+  - Aerodrome Chart
+  - Aircraft Ground Movement/Parking/Docking Chart
+  - Standard Instrument Departure (SID) Chart
+
+- Identify key features on the above charts, including:
+  - Taxiways
+  - Location signs
+  - Mandatory signs
+  - Intermediate Holding Points
+  - CAT III holding points
+  - Aerodrome Reference Point (ARP)
+  - Runway lengths
+  - Marked obstacles
+  - Taxiway hotspots
+  - Aerodrome elevation
+  - Communication frequencies
+
+### Altimetry
+- Define QNH.
+- Define QFE.
+- Distinguish between QNH and QFE.
+- Correctly issue QNH and QFE to aircraft, using appropriate phraseology—especially when the pressure setting is below 1000 hPa.
+
+### Areas of Responsibility
+- Describe in detail the areas of responsibility for:
+  - Ground Movement Planner (GMP)
+  - Ground Movement Control (GMC)
+  - Air Control (AIR)
+
+- Provide a basic description of the areas of responsibility for:
+  - Finals Director (FIN), Approach (APP)
+  - Enroute Radar (ACC)
+
+### Controller Software
+- Install and configure EuroScope along with the FIR-specific sector file used within the Arabian FIR.
+- Update the FIR-specific sector file for each AIRAC cycle, both manually (via AeroNav) and using EuroScope’s automatic updater.
+- Install and configure one of the supported audio clients.
+- Connect to both the VATSIM network and the SweatBox training server.
+- Accurately record relevant information in the departure and arrival list datablocks.
+
+### Coordination
+- Explain the purpose of coordination in air traffic control operations.
+- Coordinate effectively with relevant controllers to support the roles of Ground Movement Planner (GMP) and Ground Movement Control (GMC), including but not limited to:
+  - Issuing clearances
+  - Managing flow restrictions (e.g. MDIs, CTOTs, EOBTs)
+  - Handling runway changes
+- Perform a proper handover to, and take-over from, another controller.
+
+### Coding System
+- Identify the difference between an ICAO and IATA code.
+
+### Flight Planning
+- Explain the purpose of a flight plan and how pilots file them.
+- Amend flight plans using both EuroScope and the TopSky Flight Plan dialog.
+- Use the Arabian vACC Standard Route Database or the VFPC function to identify and correct invalid routings up to the FIR boundary.
+- Assign appropriate initial altitudes and levels based on departure instructions (e.g. clearance from APP/ACC or as per a SID).
+- Verify and correct requested flight levels (RFLs) in accordance with the semi-circular rule.
+- Identify and correct RFLs that exceed bordering FIR cruise level restrictions.
+
+### Flow Management
+- Explain the purpose of a Calculated Take-Off Time (CTOT).
+- Describe how a CTOT is applied on VATSIM.
+- Explain the purpose of a Minimum Departure Interval (MDI).
+- Sequence aircraft on the ground to minimize departure delays.
+- Understand the benefits of implementing flow control restrictions at aerodromes, including:
+  - Reducing congestion on taxiways and at holding points
+  - Minimizing the time aircraft spend with engines running and burning fuel
+  - Considering the broader implications for en-route airspace
+
+### Low Visibility Procedures (LVP)
+- Explain the purpose of Low Visibility Procedures (LVPs) and the minima for their enforcement at their training aerodrome.
+- Describe and practically demonstrate an understanding of the impact of LVPs on aerodrome operations.
+- Modify an ATIS broadcast to indicate that LVPs are in force.
+
+### Meteorological Reporting (ATIS, METAR, TAF)
+- Explain the function and purpose of an Automated Terminal Information System (ATIS).
+- Explain the function and purpose of a Meteorological Aerodrome Report (METAR).
+- Explain the function and purpose of a Terminal Aerodrome Forecast (TAF).
+- Set up a combined or split departure/arrival ATIS using vATIS, and broadcast it via both text and voice modalities.
+- Decode basic METARs and TAFs.
+
+### Meteorology
+- Provide basic definitions of the following meteorological terms:
+  - Wind
+  - Temperature
+  - Humidity
+  - Visibility
+  - Pressure
+
+- Comment on the changes in wind velocity (speed and direction) from the surface up to the 2000ft wind (free winds).
+
+### Phraseology & Radiotelephony (R/T)
+- Use the phonetic alphabet appropriately.
+- Correctly apply the readability scale (1-5).
+- Issue instructions in accordance with the phraseology outlined in the Arabian vACC Radiotelephony guide, including:
+  - Taxi instructions
+  - Level instructions
+  - Heading instructions
+  - Speed instructions
+  - Departure clearances (SIDs and non-standard departure instructions)
+  - Instructions to hold short of an active runway
+  - SSR operating instructions (squawk codes)
+  - Altimeter settings (QNH/QFE)
+  - Frequency changes
+- Recognize situations where the use of plain English may be more appropriate than standard radiotelephony (RT) phraseology.
+
+### Runway in Use
+- Select an appropriate runway for use—when no AIR controller is present—based on:
+  - Surface wind conditions
+  - 2000 ft wind (free wind)
+  - Local restrictions (e.g. nearby aerodrome operations, preferential runway limits)
+
+- Describe and practically demonstrate the sequence of actions during a runway change, including:
+  - Identifying the last aircraft assigned to the previous runway
+  - Identifying the first aircraft assigned to the new runway
+  - Re-clearing affected aircraft as necessary
+
+### Safety
+- Describe the 'red carpet rule.'
+- Practically apply the 'red carpet rule' when issuing ground movement instructions.
+
+### Squawk Codes
+- Explain the purpose of a squawk code.
+- State the purpose of various squawk codes, including:
+  - Conspicuity codes
+  - Special purpose codes (e.g., 7500, 7600, 7700)
+  - Discrete squawk codes
+
+### Stand Allocation
+- Select an appropriate stand number for a given aircraft based on its size and operator (airline).
+- Use the EuroScope arrival list and GRplugin to assign stands.
+
+### Standard Instrument Departures (SID)
+- Provide a basic definition of a Standard Instrument Departure (SID).
+- Understand the differences between non-RNAV (conventional) and RNAV SIDs.
+- Assign the correct SID based on the filed route.
+- Identify and manage outdated or incorrect SIDs.
+
+### Text Communications
+- Communicate effectively with pilots via text.
+- Contact a supervisor using the `.wallop` command, providing them with the necessary information to resolve an issue.
+- Use the private messaging function in EuroScope.
+- Utilize text aliases effectively.
+
+### VFR Traffic
+- Request a VFR circuit and CTR exit/entry clearance from the controller covering the duties of the AIR controller.
+- Explain the purpose of Visual Reference Points (VRPs) and CTR entry/exit lanes, and correctly include them in clearances when appropriate.
+
+### Workload Management
+- Prioritize communications effectively.
+- Maintain efficient control during busy periods.
+- Remain calm and professional across all communication media.
 
 ## Session Plans
 
