--- a/docs/vacc_documents/training_syllabus/s1.md
+++ b/docs/vacc_documents/training_syllabus/s1.md
@@ -113,7 +113,7 @@ The following list outlines the theoretical topics covered in the S1 Rating cour
 
 ### Controller Software
 - Install and configure EuroScope along with the FIR-specific sector file used within the Arabian FIR.
-- Update the FIR-specific sector file for each AIRAC cycle, both manually (via AeroNav) and using EuroScope’s automatic updater.
+- Update the FIR-specific sector file for each AIRAC cycle via AeroNav.
 - Install and configure one of the supported audio clients.
 - Connect to both the VATSIM network and the SweatBox training server.
 - Accurately record relevant information in the departure and arrival list datablocks.
